# scholar-rank

./: .gitignore  README.md
docs/: algorithm_design.md  data_pipeline.md  data_reference.md  notes.md
python/: pyproject.toml
python/notebook/: data_ingestion.ipynb  null_analysis.txt
python/script/: ingest_pipeline.py
python/src/scholar_rank/: utils.py
python/src/scholar_rank/ingest/: fetch_data.py
write-ups/: notes.md
