[project]
name = "scholar-rank"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "huypham-0607", email = "minhhuypham0607@gmail.com" }
]
requires-python = ">=3.14"
dependencies = []

[build-system]
requires = ["uv_build>=0.11.21,<0.12.0"]
build-backend = "uv_build"
