[project]
name = "scholar-rank"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "huypham-0607", email = "minhhuypham0607@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "boto3>=1.43.46",
    "duckdb>=1.5.4",
]

[build-system]
requires = ["uv_build>=0.11.21,<0.12.0"]
build-backend = "uv_build"

# For Pylance to work properly
[tool.pyright]
extraPaths = ["python/src"]
